--- a/movies-flix-hot/movies-flix-hot.html
+++ b/movies-flix-hot/movies-flix-hot.html
@@ -786,7 +786,7 @@
     </script>
 
 <script type='text/javascript' src='//accountantflowerrespiration.com/31/0b/50/310b508fc5771984195db5013cccce81.js'></script>
-
+<script>(function(s){s.dataset.zone='10179459',s.src='https://gizokraijaw.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
 <script>(function(s){s.dataset.zone='10179480',s.src='https://nap5k.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
 
 </body>
